<resources>
    <string name="app_name">KadChat</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="kadchat">KadChat</string>
    <string name="Skip">Пропустить</string>
    <string name="Done">Готово</string>
    <string name="intro_image">Intro image</string>
    <string name="welcome_to_kadchat">Добро пожаловать в KadChat</string>
    <string name="welcome_description">Здесь собраны сообщества по всевозможным интересам</string>
    <string name="sub_kadchat">SubKadChat</string>
    <string name="sub_kadchat_description">Ты можешь найти новые сабы по интересам и посмотреть сабы, на которые подписан</string>
    <string name="share_and_save">Делись и сохраняй</string>
    <string name="share_and_save_description">Вкладка избранное хранит закладки с комментариями и сабами. В профиле ты найдёшь информацию о себе.</string>
    <string name="find_friends_with_kadchat">Найди единомышленников с KadChat</string>
    <string name="enter">Войти</string>
    <string name="search">\ud83d\udd0d Поиск</string>
    <string name="new_upper">Новое</string>
    <string name="popular">Популярное</string>
    <string name="subscribe_to_user">Subscribe to user</string>
    <string name="unknown_error_occurred">Произошла неизвестная ошибка</string>
    <string name="success_subscribe">Вы успешно подписались на subreddit</string>
    <string name="success_unsubscribe">Вы успешно отписались от subreddit</string>
    <string name="friends_list">Список друзей</string>
    <string name="clear_saved">Очистить сохранённое</string>
    <string name="logout">Выйти</string>
    <string name="comments_count">Комментарии: %d</string>
    <string name="comments_karma_count">Карма комментариев: %d</string>
    <string name="karma_count">Карма: %d</string>
    <string name="back_button">Back button</string>
    <string name="this_is_your_friends">Это ваши друзья</string>
    <string name="friends_list_empty">У вас нет друзей \u2639</string>
    <string name="subreddit_image">Subreddit image</string>
    <string name="post_image">Post image</string>
    <string name="subreddit_subscriber_count">Подписчики: %d</string>
    <string name="add_to_favorite">add to favorite</string>
    <string name="subreddit_data_empty">У данного сабредита нет описания или изображения \u2639</string>
    <string name="to_posts">Перейти к постам</string>
    <string name="post_screen_info">Список постов для сабредита: %s</string>
    <string name="go_to_chat">Read comments</string>
    <string name="post_content_empty">Пост без контента</string>
    <string name="author_is">Автор: %s</string>
    <string name="posts">Посты</string>
    <string name="subreddits">Сабредиты</string>
    <string name="comments">Комментарии</string>
    <string name="comments_list_for">Список комментариев для %s</string>
    <string name="screen_by_user">Экран пользователя %s</string>
    <string name="create_at">Создан: %s</string>
    <string name="user_with_at">@%s</string>
    <string name="subscribe">Подписаться</string>
    <string name="unsubscribe">Отписаться</string>
    <string name="save_item_to_device">Сохраняйте %s на устройство кликая на \ud83e\udd0d</string>
    <string name="subreddits_lower">сабредиты</string>
    <string name="posts_lower">посты</string>
    <string name="comments_lower">комментарии</string>
    <string name="no_post">В данном сабредите нет постов \u2639</string>
    <string name="no_comments">В данном посте нет комментариев \u2639</string>
</resources>