<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/into_background">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialComponents.FloatingActionButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/kadchat"
        android:textAppearance="@style/montserrat_black"
        android:textColor="@color/logo_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/logo"
        app:layout_constraintStart_toEndOf="@id/logo"
        app:layout_constraintTop_toTopOf="@id/logo" />

    <TextView
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:background="@drawable/bg_ripple_transparent_rounded"
        android:clickable="true"
        android:focusable="true"
        android:textAppearance="@style/RobotoRegular"
        android:textColor="@color/sky_blue"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/logo"
        tools:text="@string/Skip" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="35dp"
        android:contentDescription="@string/intro_image"
        app:layout_constraintBottom_toTopOf="@id/pageText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        tools:src="@drawable/welcome_image" />

    <TextView
        android:id="@+id/pageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="182dp"
        android:textAppearance="@style/RobotoBold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/welcome_to_kadchat" />

    <TextView
        android:id="@+id/pageDescription"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textAlignment="center"
        android:textAppearance="@style/RobotoRegular"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/pageText"
        app:layout_constraintStart_toStartOf="@id/pageText"
        app:layout_constraintTop_toBottomOf="@id/pageText"
        tools:text="@string/welcome_description" />

</androidx.constraintlayout.widget.ConstraintLayout>