<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="11dp"
    android:animateLayoutChanges="true"
    android:background="@drawable/bg_ripple_white_rounded_10">

    <LinearLayout
        android:id="@+id/llTitleRoot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="19.08dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/ibSubscribe"
        app:layout_constraintEnd_toStartOf="@id/ibSubscribe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivCommunityIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialComponents.FloatingActionButton"
            tools:src="@drawable/ic_launcher_drawable_list" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_rounded_subreddit_color_one"
            android:ellipsize="end"
            android:maxLines="2"
            android:padding="4dp"
            android:textAppearance="@style/RobotoMediumText14"
            tools:text="Subreddit title" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/ibSubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ripple_transparent"
        android:contentDescription="@string/subscribe_to_user"
        android:padding="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:src="@drawable/ic_subscribe" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clExpandedRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibSubscribe"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_rounded_transparent_30"
            android:contentDescription="@string/subreddit_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/warning_red" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/RobotoRegular14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivImage"
            tools:text="@string/friends_list_empty" />

        <TextView
            android:id="@+id/tvEmptyData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="8dp"
            android:text="@string/subreddit_data_empty"
            android:textAlignment="center"
            android:textAppearance="@style/RobotoMediumText14"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/bottomBarrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/bottomBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tvDescription, tvEmptyData, ivImage" />

        <ImageView
            android:id="@+id/ivFavoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/bg_ripple_transparent_rounded"
            android:clickable="true"
            android:contentDescription="@string/add_to_favorite"
            android:focusable="true"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottomBarrier"
            tools:ignore="TouchTargetSizeCheck"
            tools:src="@drawable/ic_favorite_fill_24" />


        <FrameLayout
            android:id="@+id/flToPosts"
            android:layout_width="164dp"
            android:layout_height="28dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/bg_ripple_navigation_color_rounded_25"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottomBarrier"
            tools:ignore="TouchTargetSizeCheck">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/to_posts"
                android:textAppearance="@style/RobotoRegular14"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>