<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/logo_color">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="210.94dp"
        android:layout_height="189.84dp"
        android:layout_marginTop="56.08dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="-60dp"
        android:background="@drawable/bg_transparent_to_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105.08dp"
        android:text="@string/app_name"
        android:textAppearance="@style/montserrat_black"
        android:textColor="@color/logo_color"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/find_friends_with_kadchat"
        android:textAppearance="@style/RobotoRegular12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appName" />

    <FrameLayout
        android:id="@+id/enterButton"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginHorizontal="55dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/bg_ripple_app_color_rounded_25"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enter"
            android:textAppearance="@style/RobotoRegular"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>