<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="29dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/bg_ripple_white_rounded_10"
        android:orientation="vertical"
        android:paddingBottom="14.4dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivAvatar"
            android:layout_width="95.26dp"
            android:layout_height="95.26dp"
            android:layout_gravity="center"
            android:layout_marginTop="19dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MaterialComponents.FloatingActionButton"
            tools:src="@drawable/ic_launcher_drawable_list" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="13.37dp"
            android:background="@drawable/bg_rounded_subreddit_color_one"
            android:paddingHorizontal="22dp"
            android:textAppearance="@style/RobotoBoldText20"
            tools:text="User full name" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:background="@drawable/bg_rounded_subreddit_color_one"
            android:paddingHorizontal="6dp"
            android:textAppearance="@style/RobotoBoldText18"
            tools:text="\@username" />

        <TextView
            android:id="@+id/tvCommentsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="11dp"
            android:textAppearance="@style/RobotoRegular12"
            tools:text="Комментарии: 1984" />

        <TextView
            android:id="@+id/tvSubredditsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@style/RobotoRegular12"
            tools:text="Сабреддиты: 0" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/flFriendsList"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginHorizontal="29dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/bg_ripple_app_color_rounded_25"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/friends_list"
            android:textAppearance="@style/RobotoRegular14"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/flClearFavorite"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginHorizontal="29dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_ripple_app_color_rounded_25"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/clear_saved"
            android:textAppearance="@style/RobotoRegular14"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/flLogout"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginHorizontal="29dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/bg_ripple_orange_rounded_25"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/logout"
            android:textAppearance="@style/RobotoRegular14"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />
    </FrameLayout>

</LinearLayout>